# ben

./: .dockerignore  .gitignore  CI_CD_PLAN.md  Dockerfile  LICENSE  Lintukoto _ Viihde _ Ben.html  app.py  build_docker.sh  docker-compose.yml  entrypoint.sh  install_docker.sh  parse_surnames.py  pyproject.toml  requirements.txt  schema.sql  setup_db.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: CI_CD_PLAN_ARCHIVE.md  README.md
templates/: index.html  results.html
tests/: __init__.py  conftest.py  test_app.py  test_audit_logging.py
