[project]
name = "ben"
version = "0.1.0"
description = "Ben Zyskowicz surname guessing game"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pip-audit>=2.7.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.ruff]
# Enable ALL rules - this is an explicit choice for comprehensive code quality
select = ["ALL"]
# Disable some rules that might be too strict for this small project
ignore = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "T201",  # print found (we use print in scripts)
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=. --cov-report=term-missing"
